# dftp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/claude_ftp/: generate_cert.py
src/claude_ftp/client/: __main__.py
src/claude_ftp/server/: __main__.py  filesystem.py  session.py
src/dftp/: generate_cert.py  protocol.py
src/dftp/client/: __main__.py  cli.py  connection.py
src/dftp/server/: __main__.py  app.py
tests/: conftest.py  test_filesystem.py  test_integration.py  test_protocol.py
