[project]
name = "dftp"
version = "0.1.0"
description = "FTP-like client and server over WebTransport (HTTP/3)"
requires-python = ">=3.10"
dependencies = [
    "aioquic>=1.2.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dftp-server = "dftp.server.__main__:main"
dftp-client = "dftp.client.__main__:main"
dftp-gencert = "dftp.generate_cert:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
